# osuLinksToCollections

./: Cargo.toml  README.md  links.txt
src/: api_data.rs  main.rs
