[package]
name = "osu_collections"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.10"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
osu-db = "0.3"
rosu-v2 = "0.11.0"
url = "2.5.8"
